--- a/update_text_file.ipynb
+++ b/update_text_file.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notebook walking through updating the text file used for model training. "
+    "## Notebook walking through updating the text file - this could be automated, but keeping it as a notebook allows for an interactive process to QA/QC the descriptions and make sure they were scraped correctly. "
    ]
   },
   {
@@ -151,10 +151,6 @@
     }
    ],
    "source": [
-    "# connect to drive\n",
-    "#from google.colab import drive\n",
-    "#drive.mount('/content/drive',force_remount=True)\n",
-    "\n",
     "data = pd.read_csv('taylor_stitch_info.csv')\n",
     "data.head()"
    ]
